--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <p style="font-size: 150%;">Estamos aprendiendo HTML y necesitamos practicar para que se nos fije el conocimiento, en poco tiempo voy a poder maquetar un sitio web completo. en este documento de practica veremos los distintos HTML que podemos encontrar. </p>
     <h1>Primero HTML semantico.</h1>
     <p style="font-size: 150%;" >HTML Semántico es el uso de las etiquetas HTML para reforzar la semántica, o el significado, de la información en las páginas web más que simplemente redefinir su forma de presentación (apariencia). El HTML semántico es procesado por los navegadores web regulares así como por muchos otros agentes de usuarios. Las CSS son usadas para sugerir la presentación de la página a usuarios humanos.</p>
+    <h1> Primer subtema Usos.  </h1>
+    <p style="font-size: ;150%">DHTML permite a los desarrolladores añadir a las páginas efectos que de otra manera serían difíciles de alcanzar. En resumen: los lenguajes de scripting sirven para cambiar la estructura DOM.</p>
+    
+
 
 </body>
