--- a/practica2.html
+++ b/practica2.html
@@ -5,11 +5,20 @@
   <meta charset="UTF-8">
   <title>Resolución ejercicio etiquetas de encabezdos html</title>
   <meta content="author" content="francesc ricart">
+  <style type="text/css">  
+  h4 {color: blue;}
+  p  {color: crimson;}
+  h1 {color: red;}
+  </style> /*Este agregado fue para probar CSS */
+
 </head>
 
 <body>
-<h2>Listas ordenadas</h2>
+<h1>Listas ordenadas</h1>
 <h4>La lista debe ir desde la a hasta la d</h4>
+   <p>
+      DE PRUEBA DE SELECTOR DESCENDENTE       
+      </p>
 <ol type="a">
 
   <li> Elemento 1 </li>
@@ -55,7 +64,7 @@
    <li> Elemento 4 </li>  
 </ol>
 
-<h4>La lista debe ir desde 100 hasta 97 (descendente) </h4>
+<h4> La lista debe ir desde 100 hasta 97 (descendente) </h4>
 <ol reversed  start="100" >
    <li>Elemento 1 </li>
    <li>Elemento 2 </li>
