--- a/practica2.html
+++ b/practica2.html
@@ -7,8 +7,10 @@
   <meta content="author" content="francesc ricart">
   <style type="text/css">  
   h4 {color: blue;}
-  p  {color: crimson;}
+  p  {color: crimson;font-size: 2pc;}
   h1 {color: red;}
+  .destacado {color: rgb(0, 255, 191);margin-left: 2em;}
+  #fabian {color: greenyellow }
   </style> /*Este agregado fue para probar CSS */
 
 </head>
@@ -19,6 +21,9 @@
    <p>
       DE PRUEBA DE SELECTOR DESCENDENTE       
       </p>
+   <p class="destacado">Lorem ipsum dolor sit ame...</p>
+   <p id="fabian">Nunc sed lacus <ar href="#" class="destacado">est adipicing</ar> accumsam..</p>
+   <p>Class aptent taciti sociosqu ad litora..</p>   
 <ol type="a">
 
   <li> Elemento 1 </li>
@@ -98,6 +103,12 @@
       <li type=square >Elemento 4 </li>          
    </ul>
     
+   <div style="color:blue ;">
+      <h2>La lista con div </h2>
+      <p>
+         la prueba de parrafo de la lista 
+      </p>
+      </div>
 </body>
 
 </html>
