--- a/listas.html
+++ b/listas.html
@@ -4,32 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listas</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Menu</h1>
-    <!--Listas desordenadas-->
     <ul>
-        <li>Inicio</li>
-        <li>Noticias</li>
-        <li>Articulos</li>
-        <li>Contactos</li>
+        <li>leche</li>        
+        <li>leche</li>
+        <li>leche</li>
+        <li>leche</li>
     </ul>
-    <!--Listas ordenadas-->
-    <h1>Instrucciones</h1>
     <ol>
-        <li>Enchufar correctamente</li>
-        <li>Comprobar conexiones</li>
-        <li>Encender el aparator</li>
+        <li>leche</li>
+        <li>leche</li>
+        <li>leche</li>
     </ol>
-    <!---Listas de definicion-->
-    <h1>Metalenguajes</h1>
-    <dl>
-        <dt><strong>SGML</strong></dt>
-        <dd>Metalenguajes para la definicion de otros lenguajes de marcado</dd>
-    
-        <dt>XML</dt>
-        <dd>Lenguaje basado en SGML y que se emplea para describir datos </dd>
-    </dl>
 </body>
 </html>
