--- a/tablas.html
+++ b/tablas.html
@@ -7,31 +7,20 @@
     <title>Tablas</title>
 </head>
 <body>
-    <h1>Listado de Cursos</h1>
-    <table>
-    <!----Titulo o Leyenda de la Tabla -->
-        <caption>Listado de Cursos</caption>
-        <tr>
-            <td colspan="1" scope="col" ><i>Cursos</i></td>
-            <td colspan="1"><i>Horas</i></td>
-            <td><i>Horario</i></td>
+<!---para hacer tablas con tr/td definimos filas-->
+   <table>
+        <tr>   
+            <td>Nombre</td>
+            <td> Apellido</td>
+            <td>Direcion</td>
+            <td>Telefono</td>
         </tr>
-        <tr>
-            <td>CSS</td>
-            <td>20</td>
-            <td>16:00 - 20:00 </td>
+        <tr> 
+            <td>Fabian</td>
+            <td>Correa</td>
+            <td>Sgto Cabral 1693</td>
+            <td>4758-0358</td>
         </tr>
-        <tr>
-            <td>HTML</td>
-            <td>30</td>
-            <td>09:00 - 16:00 </td>
-        </tr>
-        <tr>
-            <td>Dreamweaver</td>
-            <td>50</td>
-            <td>19:00 - 23:00 </td>
-        </tr>
-
     </table>
 </body>
 </html>
